update userChrome.css for new version of firefox

--- a/userChrome.css
+++ b/userChrome.css
@@ -53,6 +53,9 @@
   margin: 0 !important;
   border: none !important;
   box-shadow: none !important;
+}
+
+#urlbar-input {
   text-align: center !important;
 }
 
